--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.emaginalabs</groupId>
     <artifactId>aop-cache</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>AOP Cache</name>
     <description>Provides utilities to cache methods in an aspect oriented way.</description>
 
@@ -31,7 +31,7 @@
         <developerConnection>scm:git:git@github.com:delr3ves/java-${artifactId}.git
         </developerConnection>
         <url>https://github.com/delr3ves/java-${artifactId}</url>
-        <tag>1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
