--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.emaginalabs</groupId>
     <artifactId>aop-cache</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>AOP Cache</name>
     <description>Provides utilities to cache methods in an aspect oriented way.</description>
 
@@ -40,7 +39,7 @@
         <developerConnection>scm:git:git@github.com:delr3ves/java-${project.artifactId}.git
         </developerConnection>
         <url>https://github.com/delr3ves/java-${project.artifactId}</url>
-        <tag>HEAD</tag>
+        <tag>aop-cache-1.0.0</tag>
     </scm>
 
     <build>
@@ -78,7 +77,7 @@
                             <goal>check</goal>
                         </goals>
                         <configuration>
-                            <rules></rules>
+                            <rules />
                         </configuration>
                     </execution>
                 </executions>
