--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
 
     <groupId>com.emaginalabs</groupId>
     <artifactId>aop-cache</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <name>AOP Cache</name>
     <description>Provides utilities to cache methods in an aspect oriented way.</description>
+    <url>https://github.com/delr3ves/java-${project.artifactId}</url>
 
     <inceptionYear>2014</inceptionYear>
     <licenses>
@@ -121,6 +122,10 @@
                                 <goals>
                                     <goal>sign</goal>
                                 </goals>
+                                <configuration>
+                                    <keyname>B4C2824D16CD72E3</keyname>
+                                    <passphrase>${gpg.passphrase}</passphrase>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
